[project]
name = "conversation-suggester"
version = "0.1.0"
description = "A conversation suggestion tool using Ollama"
authors = []
requires-python = ">=3.12"
dependencies = [
    "rich==13.7.0",
    "ollama>=0.1.6",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
start = "python conversation_suggester.py"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.sdist]
include = [
    "conversation_suggester.py",
    "README.md",
    "pyproject.toml",
] 
